<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="33dp"
        android:ems="0"
        android:hint="@string/filter_name"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:entries="@array/filter_group_by"
        android:prompt="@string/filter_group"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:text="@string/filter_submit" />

</LinearLayout>